Fix Spacing of ul and Logo
Made ul padding 0x to remove excess padding remnants from list. Applied justify content of heading to be space-around.

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,6 +3,7 @@
   background: papayawhip;
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
 
 .logo {
@@ -17,6 +18,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  padding: 0px;
 }
 
 a {
